# NEWCLA

./: Array_Construction.c  Array_Construction.h  CMakeLists.txt  Check_Dis.c  Check_Dis.h  Check_Validity.c  Check_Validity.h  Cons_Struct.h  Dis_Pair.h  Generate_Set.c  Generate_Set.h  Input_Info.c  Input_Info.h  Interaction_Set.h  Mode_Enum.h  Para_Struct.h  Val_Struct.h  Valid_Interaction.h  Yices_Check.c  Yices_Check.h  main.c  result_30  test.input
DCWorkshop/: DCWorkshop.aux  DCWorkshop.dvi  DCWorkshop.tex
